--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -47,5 +47,5 @@ scholar_userid: 5ClEDSoAAAAJ # your Google Scholar ID
 # zotero_username: # your zotero username
 custom_social: # can be any name here other than the ones already defined above
   logo: https://upload.wikimedia.org/wikipedia/commons/8/8f/Google_Patents_logo.png #https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-  title: Custom Social
-  url: https://www.alberteinstein.com/
+  title: Google Patent
+  url: https://patents.google.com/?inventor=jieqiang+wei
