change blog title

--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Jay's Blog # blog_name will be displayed in your blog page
+blog_description: Here I document my learning note, as well as some of my calligraphy stuff. 
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
